[gd_scene load_steps=3 format=3 uid="uid://dqh2dayghusjh"]

[ext_resource type="Theme" uid="uid://6xg4psw20cf3" path="res://assests/themes/menu.tres" id="1_theme"]
[ext_resource type="Script" uid="uid://dydjfwntpu6gr" path="res://scripts/win_overlay.gd" id="2_e56f3"]

[node name="win_overlay" type="CenterContainer"]
process_mode = 3
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_theme")
script = ExtResource("2_e56f3")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "You Won!"
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="Reset" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="Difficulty" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Change Difficulty"

[node name="Exit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="PanelContainer/VBoxContainer/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Difficulty" to="." method="_on_difficulty_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
